--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "yarn run dev",
-    "dev": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.dev.js",
+    "dev": "yarn run start",
+    "start": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js"
   },
   "keywords": [],
